--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.20.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
+    "formidable": "^2.1.1",
+    "random-string-generator": "^1.0.1",
+    "randomstring": "^1.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spotify-web-playback": "^0.10.1",
+    "spotify-web-api-node": "^5.0.2",
+    "superagent": "^8.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
